nenolod     2005/10/08 19:06:11 UTC	(20051008-2753)
  Log:
  - integrate vhost system into the core.
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 
  +155 -1	trunk/modules/nickserv/Makefile.in (File Modified) 
  + -		trunk/modules/nickserv/vhost.c (File Added) 
  +155 -1	trunk/modules/userserv/Makefile.in (File Modified) 
  + -		trunk/modules/userserv/vhost.c (File Added) 


pfish       2005/10/07 21:25:08 UTC	(20051007-2751)
  Log:
  - Fix empty notice
  - Display [unread] on new memos on MS LIST
  

  Changes:	Modified:
  +4 -1		trunk/modules/memoserv/list.c (File Modified) 


kog         2005/10/07 19:24:57 UTC	(20051007-2749)
  Log:
  read now gives notice of receipt if sender online, memo if sender offline 
  

  Changes:	Modified:
  +35 -7	trunk/modules/memoserv/read.c (File Modified) 


alambert    2005/10/07 18:18:19 UTC	(20051007-2747)
  Log:
  OS MODE: Make sure we specify which channel doesn't exist. Reported by pi.

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/mode.c (File Modified) 


nenolod     2005/10/07 03:45:59 UTC	(20051007-2745)
  Log:
  glibc sucks.

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


kog         2005/10/07 01:43:55 UTC	(20051007-2743)
  Log:
  notify hook now uses notice, not myuser_notice
  

  Changes:	Modified:
  +5 -3		trunk/modules/memoserv/main.c (File Modified) 


jilles      2005/10/07 00:50:12 UTC	(20051007-2741)
  Log:
  Improve message on login/identify to a frozen nick/username.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/identify.c (File Modified) 
  +1 -1		trunk/modules/userserv/login.c (File Modified) 


jilles      2005/10/07 00:49:45 UTC	(20051007-2739)
  Log:
  Quotes need to be used in pairs.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/set.c (File Modified) 
  +2 -3		trunk/modules/userserv/set.c (File Modified) 


pfish       2005/10/07 00:28:21 UTC	(20051007-2737)
  Log: