@@ -1,3 +1,13 @@
+nenolod     2005/10/08 19:10:25 UTC	(20051008-2755)
+  Log:
+  Place MemoServ section below OperServ.
+  
+
+  Changes:	Modified:
+  +21 -21	trunk/dist/example.conf (File Modified) 
+  +21 -21	trunk/dist/example.userserv.conf (File Modified) 
+
+
 nenolod     2005/10/08 19:06:11 UTC	(20051008-2753)
   Log:
   - integrate vhost system into the core.
